# agentic_ai

./: .gitignore  README.md
career_conversation/: app.py
career_conversation/me/: summary-sling.txt
deep_research_with_email_input_and_guardrail/: README.md  deep_research.py  email_agent.py  email_checker_agent.py  requirements.txt  research_manager.py
engineer_team2/: README.md  pyproject.toml
engineer_team2/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineer_team2/src/engineer_team2/: crew.py  main.py
engineer_team2/src/engineer_team2/config/: agents.yaml  tasks.yaml
langgraph_checkpoint_howto/: 2_lab2 copy_2.ipynb  README.md
sidekick_hf_docker_chromium_deploy/: Dockerfile  README-docker.md  README.md  app.py  requirements.txt  sidekick.py  sidekick_tools.py
trip_daily_planner/: README.md  pyproject.toml  requirements.txt
trip_daily_planner/src/trip_daily_planner/: app.py  crew.py  main.py
trip_daily_planner/src/trip_daily_planner/config/: agents.yaml  tasks.yaml
trip_daily_planner/src/trip_daily_planner/tools/: email_tool.py
