[project]
name = "engineer_team2"
version = "0.1.0"
description = "engineer_team2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.6.0",
    "gradio>=6.1.0",
]

[project.scripts]
engineer_team2 = "engineer_team2.main:run"
run_crew = "engineer_team2.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
