[project]
name = "trip_daily_planner"
version = "0.1.0"
description = "trip_daily_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
trip_daily_planner = "trip_daily_planner.main:run"
run_crew = "trip_daily_planner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
